# spider_web

./: pyproject.toml  readme.md  requirements.txt
src/: account.py  main.py  scheduler.py  task_manager.py
src/templates/: access.html  base.html
src/utils/: logger_config.py
