[project]
name = "spider-web"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.95.2",
    "uvicorn==0.22.0",
    "jinja2==3.0.3",
    "python-multipart==0.0.6",
    "aiohttp==3.11.11",
    "sqlalchemy==2.0.15",
    "apscheduler>=3.10.0",
    "pytz>=2026.1.post1",
]

[tool.uv]
package = false
